--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@
 
 	<footer class="main_footer">
 		<div class="main_footer__container">
-			<div class="main_footer__rights"><p>© NitroFilms 2019 All rights reserved</p></div>
+			<div class="main_footer__rights"><span class="main_footer__rightstext">© NitroFilms 2019 All rights reserved</span></div>
 			<div class="main_footer__social">
 				<ul class="main_footer__socialist">
 					<li class="main_footer__socialicon"><a href="#" class="main_footer__socialink"><i class="fab fa-facebook-square"></i></a></li>
