--- a/index.html
+++ b/index.html
@@ -38,27 +38,29 @@
 	<main class="main_container">
 		<section class="main_container__hero"></section>
 		<section id="gallery" class="main_container__grid">
-		  <div class="main_container__frame--1x1 tomato"><a href="project.html">1</a></div>
-		  <div class="main_container__frame--2x1 slateBlue">2</div>
-		  <div class="main_container__frame--1x1 orange">3</div>
-		  <div class="main_container__frame--1x2 gray">4</div>
-		  <div class="main_container__frame--2x2 dodgerBlue">5</div>
-		  <div class="main_container__frame--1x2 gray">6</div>
-		  <div class="main_container__frame--2x2 mediumSeaGreen">7</div>
-		  <div class="main_container__frame--1x1 gray">8</div>
-		  <div class="main_container__frame--1x1 slateBlue">9</div>
-		  <div class="main_container__frame--2x1 gray">10</div>
-		  <div class="main_container__frame--1x1 violet">11</div>
-		  <div class="main_container__frame--2x1 gray">12</div>
-		  <div class="main_container__frame--1x1 tomato">13</div>
-		  <div class="main_container__frame--1x1 gray">14</div>
-	</section>
+		  <div class="main_container__frame--smallsquare tomato">
+		  	<a class="main_container__framelink" href="#"><img class="main_container__framelink" src="assets/images/thumbs/1.png" alt=""></a>
+		  </div>
+		  <div class="main_container__frame--horect slateBlue">2</div>
+		  <div class="main_container__frame--smallsquare orange">3</div>
+		  <div class="main_container__frame--vertrect gray">4</div>
+		  <div class="main_container__frame--bigsquare dodgerBlue">5</div>
+		  <div class="main_container__frame--vertrect gray">6</div>
+		  <div class="main_container__frame--bigsquare mediumSeaGreen">7</div>
+		  <div class="main_container__frame--smallsquare gray">8</div>
+		  <div class="main_container__frame--smallsquare slateBlue">9</div>
+		  <div class="main_container__frame--horect gray">10</div>
+		  <div class="main_container__frame--smallsquare violet">11</div>
+		  <div class="main_container__frame--horect gray">12</div>
+		  <div class="main_container__frame--smallsquare tomato">13</div>
+		  <div class="main_container__frame--smallsquare gray">14</div>
+		</section>
 	</main>
 
 	<footer class="main_footer">
 		<div class="main_footer__loadmore"><button id="load-more" class="main_footer__morelink" href="#"><i class="fas fa-plus"></i></button></div>
 		<div class="main_footer__container">
-			<div class="main_footer__rights"><p>© NitroFilms 2019 All rights reserved</p></div>
+			<div class="main_footer__rights"><span class="main_footer__rightstext">© NitroFilms 2019 All rights reserved</span></div>
 			<div class="main_footer__social">
 				<ul class="main_footer__socialist">
 					<li class="main_footer__socialicon"><a href="#" class="main_footer__socialink"><i class="fab fa-facebook-square"></i></a></li>
