--- a/project.html
+++ b/project.html
@@ -43,27 +43,38 @@
 		<section class="main_container__descproj">
 			<div class="main_container__credits">
 				<ul class="main_container__creditslist">
-					<li class="main_container__creditsitem"><p>Client:</p></li>
-					<li class="main_container__creditsitem"><p>Directed and produced by:</p></li>
-					<li class="main_container__creditsitem"><p>Year:</p></li>
-					<li class="main_container__creditsitem"><p>Services:</p></li>
-					<li class="main_container__creditsitem"><p>Credits:</p></li>
+					<li class="main_container__creditsitem">Client: <span class="main_container__creditsitem--info">Nike</span></li>
+					<li class="main_container__creditsitem">Directed and produced by: <span class="main_container__creditsitem--info">Lorem ipsum dolor sit amet</span></p></li>
+					<li class="main_container__creditsitem">Year: <span class="main_container__creditsitem--info">Lorem ipsum dolor sit amet</span></li>
+					<li class="main_container__creditsitem">Services: <span class="main_container__creditsitem--info">Lorem ipsum dolor sit amet</span></li>
+					<li class="main_container__creditsitem">Credits: <span class="main_container__creditsitem--info">Lorem ipsum dolor sit amet</span></li>
 				</ul>
 			</div>
 			<div class="main_container__overview">
-				<span>Overview</span>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora officia unde doloremque non reprehenderit doloribus temporibus dolores distinctio labore nemo alias reiciendis nostrum tempore, asperiores, nihil eius ea necessitatibus culpa.</p>
-				<span>Proyecto</span>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus perspiciatis repudiandae reprehenderit quidem quis quae excepturi, mollitia qui accusamus doloremque nostrum odit corporis labore ullam ut totam aspernatur exercitationem, cum.</p>
+				<span class="main_container__overviewtitle">Overview</span>
+				<p class="main_container__overviewtext">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora officia unde doloremque non reprehenderit doloribus temporibus dolores distinctio labore nemo alias reiciendis nostrum tempore, asperiores, nihil eius ea necessitatibus culpa.</p>
+				<span class="main_container__overviewtitle">Proyecto</span>
+				<p class="main_container__overviewtext">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus perspiciatis repudiandae reprehenderit quidem quis quae excepturi, mollitia qui accusamus doloremque nostrum odit corporis labore ullam ut totam aspernatur exercitationem.</p>
 			</div>
 		</section>
-		<section class="main_container__stills"></section>
-		<section class="main_container__pagination"></section>
+		<section class="main_container__stills">
+			<section id="gallery" class="main_container__grid">
+		  <div class="main_container__frame--halfwidth tomato">1</div>
+		  <div class="main_container__frame--halfwidth slateBlue">2</div>
+		  <div class="main_container__frame--halfwidth orange">3</div>
+		  <div class="main_container__frame--halfwidth gray">4</div>
+		</section>
+		</section>
+		<section class="main_container__pagination">
+			<div class="main_container__prev"><a class="main_container__paglink" href="#"><i class="fas fa-chevron-left fa-2x"></i></a></div>
+			<div class="main_container__thanks"><h5>Thanks for watching!</h5></div>
+			<div class="main_container__next"><a class="main_container__paglink" href="#"><i class="fas fa-chevron-right fa-2x"></i></a></div>
+		</section>
 	</main>
 
 	<footer class="main_footer">
 		<div class="main_footer__container">
-			<div class="main_footer__rights"><p>© NitroFilms 2019 All rights reserved</p></div>
+			<div class="main_footer__rights"><span class="main_footer__rightstext">© NitroFilms 2019 All rights reserved</span></div>
 			<div class="main_footer__social">
 				<ul class="main_footer__socialist">
 					<li class="main_footer__socialicon"><a href="#" class="main_footer__socialink"><i class="fab fa-facebook-square"></i></a></li>
