--- a/index.html
+++ b/index.html
@@ -39,7 +39,11 @@
 		<section class="main_container__hero"></section>
 		<section id="gallery" class="main_container__grid">
 		  <div class="main_container__frame--smallsquare tomato">
-		  	<a class="main_container__framelink" href="#"><img class="main_container__framelink" src="assets/images/thumbs/1.png" alt=""></a>
+		  	<a href="#"><img class="main_container__thumb" src="assets/images/thumbs/1.png" alt=""></a>
+		  	<div class="main_container__caption">
+		  		<h2>Nombre proyecto</h2>
+		  		<span class="main_container__captiontext">Categoría del proyecto</span>
+		  	</div>
 		  </div>
 		  <div class="main_container__frame--horect slateBlue">2</div>
 		  <div class="main_container__frame--smallsquare orange">3</div>
