--- a/index.html
+++ b/index.html
@@ -37,28 +37,32 @@
 
 	<main class="main_container">
 		<section class="main_container__hero"></section>
-		<section id="gallery" class="main_container__grid">
-		  <div class="main_container__frame--smallsquare tomato">
-		  	<a href="#"><img class="main_container__thumb" src="assets/images/thumbs/1.png" alt=""></a>
-		  	<div class="main_container__caption">
-		  		<h2>Nombre proyecto</h2>
-		  		<span class="main_container__captiontext">Categoría del proyecto</span>
-		  	</div>
-		  </div>
-		  <div class="main_container__frame--horect slateBlue">2</div>
-		  <div class="main_container__frame--smallsquare orange">3</div>
-		  <div class="main_container__frame--vertrect gray">4</div>
-		  <div class="main_container__frame--bigsquare dodgerBlue">5</div>
-		  <div class="main_container__frame--vertrect gray">6</div>
-		  <div class="main_container__frame--bigsquare mediumSeaGreen">7</div>
-		  <div class="main_container__frame--smallsquare gray">8</div>
-		  <div class="main_container__frame--smallsquare slateBlue">9</div>
-		  <div class="main_container__frame--horect gray">10</div>
-		  <div class="main_container__frame--smallsquare violet">11</div>
-		  <div class="main_container__frame--horect gray">12</div>
-		  <div class="main_container__frame--smallsquare tomato">13</div>
-		  <div class="main_container__frame--smallsquare gray">14</div>
-		</section>
+		<ul id="gallery" class="main_container__grid">
+		  <li class="main_container__frame--smallsquare tomato">
+		  	<a href="project.html" class="main_container__link"> 
+		  		<img class="main_container__thumb" src="assets/images/thumbs/1.png" alt="">
+
+			  	<object class="main_container__caption">
+			  		<h2>Nombre proyecto</h2>
+			  		<span class="main_container__captiontext">Categoría del proyecto</span>
+			  		<a href="http://desafiolatam.com" target="_blank">Link al desafío</a>
+			  	</object>
+		  	</a>
+		  </li>
+		  <li class="main_container__frame--horect slateBlue">2</li>
+		  <li class="main_container__frame--smallsquare orange">3</li>
+		  <li class="main_container__frame--vertrect gray">4</li>
+		  <li class="main_container__frame--bigsquare dodgerBlue">5</li>
+		  <li class="main_container__frame--vertrect gray">6</li>
+		  <li class="main_container__frame--bigsquare mediumSeaGreen">7</li>
+		  <li class="main_container__frame--smallsquare gray">8</li>
+		  <li class="main_container__frame--smallsquare slateBlue">9</li>
+		  <li class="main_container__frame--horect gray">10</li>
+		  <li class="main_container__frame--smallsquare violet">11</li>
+		  <li class="main_container__frame--horect gray">12</li>
+		  <li class="main_container__frame--smallsquare tomato">13</li>
+		  <li class="main_container__frame--smallsquare gray">14</li>
+		</ul>
 	</main>
 
 	<footer class="main_footer">
