--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
 						<li class="main_nav__item"><a href="index.html#gallery" class="main_nav__link">Work</a></li>
 						<li class="main_nav__item"><a href="about.html" class="main_nav__link">About</a></li>
 						<li class="main_nav__item"><a href="contact.html" class="main_nav__link">Contact</a></li>
-						<li class="main_nav__item"><a href="ideas.html" class="main_nav__link">Ideas</a></li>
 					</ul>
 
 					<ul class="main_nav__socialist">
@@ -37,15 +36,13 @@
 
 	<main class="main_container">
 		<section class="main_container__hero"></section>
-		<ul id="gallery" class="main_container__grid">
+		<ul id="gallery" class="main_container__masonry">
 		  <li class="main_container__frame--smallsquare tomato">
 		  	<a href="project.html" class="main_container__link"> 
 		  		<img class="main_container__thumb" src="assets/images/thumbs/1.png" alt="">
-
 			  	<object class="main_container__caption">
 			  		<h2>Nombre proyecto</h2>
-			  		<span class="main_container__captiontext">Categoría del proyecto</span>
-			  		<a href="http://desafiolatam.com" target="_blank">Link al desafío</a>
+			  		<a class="main_container__captiontext" href="http://desafiolatam.com" target="_blank">Categoría del proyecto</a>
 			  	</object>
 		  	</a>
 		  </li>
