--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 		  	<a href="project.html" class="main_container__link"> 
 		  		<img class="main_container__thumb" src="assets/images/thumbs/1.png" alt="">
 			  	<object class="main_container__caption">
-			  		<h2>Nombre proyecto</h2>
+			  		<span class="main_container__captiontitle">Nombre proyecto</span>
 			  		<a class="main_container__captiontext" href="http://desafiolatam.com" target="_blank">Categoría del proyecto</a>
 			  	</object>
 		  	</a>
