--- a/project.html
+++ b/project.html
@@ -37,7 +37,9 @@
 	<main class="main_container">
 		<section class="main_container__heroproj"></section>
 		<section class="main_container__nameproj">
-			<h2 class="main_container__titleproj"><span class="main_container__titleproj--bold">Score</span> Energy Drink</h2>
+			<h2 class="main_container__titleproj">
+				Score <span class="main_container__titleproj--bold">Energy Drink</span> 
+			</h2>
 		</section>
 		<section class="main_container__descproj">
 			<div class="main_container__credits">
@@ -57,12 +59,12 @@
 			</div>
 		</section>
 		<section class="main_container__stills">
-			<section id="gallery" class="main_container__grid">
-		  <div class="main_container__frame--halfwidth tomato">1</div>
-		  <div class="main_container__frame--halfwidth slateBlue">2</div>
-		  <div class="main_container__frame--halfwidth orange">3</div>
-		  <div class="main_container__frame--halfwidth gray">4</div>
-		</section>
+			<ul id="gallery" class="main_container__masonry">
+			  <li class="main_container__frame--halfwidth tomato">1</li>
+			  <li class="main_container__frame--halfwidth slateBlue">2</li>
+			  <li class="main_container__frame--halfwidth orange">3</li>
+			  <li class="main_container__frame--halfwidth gray">4</li>
+		</ul>
 		</section>
 		<section class="main_container__pagination">
 			<div class="main_container__prev"><a class="main_container__paglink" href="#"><i class="fas fa-chevron-left fa-2x"></i></a></div>
