--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 		  		<img class="main_container__thumb" src="assets/images/thumbs/1.png" alt="">
 			  	<object class="main_container__caption">
 			  		<span class="main_container__captiontitle">Nombre proyecto</span>
-			  		<a class="main_container__captiontext" href="http://desafiolatam.com" target="_blank">Categoría del proyecto</a>
+			  		<a class="main_container__captiontext" href="#" target="_blank">Categoría del proyecto</a>
 			  	</object>
 		  	</a>
 		  </li>
