final previo wordpress

--- a/index.html
+++ b/index.html
@@ -46,16 +46,106 @@
 			  	</object>
 		  	</a>
 		  </li>
-		  <li class="main_container__frame--horect slateBlue">2</li>
-		  <li class="main_container__frame--smallsquare orange">3</li>
-		  <li class="main_container__frame--vertrect gray">4</li>
-		  <li class="main_container__frame--bigsquare dodgerBlue">5</li>
-		  <li class="main_container__frame--vertrect gray">6</li>
-		  <li class="main_container__frame--bigsquare mediumSeaGreen">7</li>
-		  <li class="main_container__frame--smallsquare gray">8</li>
-		  <li class="main_container__frame--smallsquare slateBlue">9</li>
-		  <li class="main_container__frame--horect gray">10</li>
-		  <li class="main_container__frame--smallsquare violet">11</li>
+
+		  <li class="main_container__frame--horect slateBlue">
+		  	<a href="project.html" class="main_container__link"> 
+		  		<img class="main_container__thumb" src="assets/images/thumbs/1.png" alt="">
+			  	<object class="main_container__caption">
+			  		<span class="main_container__captiontitle">Nombre proyecto</span>
+			  		<a class="main_container__captiontext" href="#" target="_blank">Categoría del proyecto</a>
+			  	</object>
+		  	</a>
+		  </li>
+
+		  <li class="main_container__frame--smallsquare orange">
+		  	<a href="project.html" class="main_container__link"> 
+		  		<img class="main_container__thumb" src="assets/images/thumbs/1.png" alt="">
+			  	<object class="main_container__caption">
+			  		<span class="main_container__captiontitle">Nombre proyecto</span>
+			  		<a class="main_container__captiontext" href="#" target="_blank">Categoría del proyecto</a>
+			  	</object>
+		  	</a>
+		  </li>
+
+		   <li class="main_container__frame--vertrect gray">
+		  	<a href="project.html" class="main_container__link"> 
+		  		<img class="main_container__thumb" src="assets/images/thumbs/1.png" alt="">
+			  	<object class="main_container__caption">
+			  		<span class="main_container__captiontitle">Nombre proyecto</span>
+			  		<a class="main_container__captiontext" href="#" target="_blank">Categoría del proyecto</a>
+			  	</object>
+		  	</a>
+		  </li>
+
+		   <li class="main_container__frame--bigsquare dodgerBlue">
+		  	<a href="project.html" class="main_container__link"> 
+		  		<img class="main_container__thumb" src="assets/images/thumbs/1.png" alt="">
+			  	<object class="main_container__caption">
+			  		<span class="main_container__captiontitle">Nombre proyecto</span>
+			  		<a class="main_container__captiontext" href="#" target="_blank">Categoría del proyecto</a>
+			  	</object>
+		  	</a>
+		  </li>
+
+		  <li class="main_container__frame--vertrect gray">
+		  	<a href="project.html" class="main_container__link"> 
+		  		<img class="main_container__thumb" src="assets/images/thumbs/1.png" alt="">
+			  	<object class="main_container__caption">
+			  		<span class="main_container__captiontitle">Nombre proyecto</span>
+			  		<a class="main_container__captiontext" href="#" target="_blank">Categoría del proyecto</a>
+			  	</object>
+		  	</a>
+		  </li>
+	
+		  <li class="main_container__frame--bigsquare mediumSeaGreen">
+		  	<a href="project.html" class="main_container__link"> 
+		  		<img class="main_container__thumb" src="assets/images/thumbs/1.png" alt="">
+			  	<object class="main_container__caption">
+			  		<span class="main_container__captiontitle">Nombre proyecto</span>
+			  		<a class="main_container__captiontext" href="#" target="_blank">Categoría del proyecto</a>
+			  	</object>
+		  	</a>
+		  </li>
+
+		  <li class="main_container__frame--smallsquare gray">
+		  	<a href="project.html" class="main_container__link"> 
+		  		<img class="main_container__thumb" src="assets/images/thumbs/1.png" alt="">
+			  	<object class="main_container__caption">
+			  		<span class="main_container__captiontitle">Nombre proyecto</span>
+			  		<a class="main_container__captiontext" href="#" target="_blank">Categoría del proyecto</a>
+			  	</object>
+		  	</a>
+		  </li>
+
+		  <li class="main_container__frame--smallsquare slateBlue">
+		  	<a href="project.html" class="main_container__link"> 
+		  		<img class="main_container__thumb" src="assets/images/thumbs/1.png" alt="">
+			  	<object class="main_container__caption">
+			  		<span class="main_container__captiontitle">Nombre proyecto</span>
+			  		<a class="main_container__captiontext" href="#" target="_blank">Categoría del proyecto</a>
+			  	</object>
+		  	</a>
+		  </li>
+
+		  <li class="main_container__frame--horect gray">
+		  	<a href="project.html" class="main_container__link"> 
+		  		<img class="main_container__thumb" src="assets/images/thumbs/1.png" alt="">
+			  	<object class="main_container__caption">
+			  		<span class="main_container__captiontitle">Nombre proyecto</span>
+			  		<a class="main_container__captiontext" href="#" target="_blank">Categoría del proyecto</a>
+			  	</object>
+		  	</a>
+		  </li>
+
+		  <li class="main_container__frame--smallsquare violet">
+		  	<a href="project.html" class="main_container__link"> 
+		  		<img class="main_container__thumb" src="assets/images/thumbs/1.png" alt="">
+			  	<object class="main_container__caption">
+			  		<span class="main_container__captiontitle">Nombre proyecto</span>
+			  		<a class="main_container__captiontext" href="#" target="_blank">Categoría del proyecto</a>
+			  	</object>
+		  	</a>
+		  </li>
 		</ul>
 	</main>
 
