--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 		<ul id="gallery" class="main_container__masonry">
 		  <li class="main_container__frame--smallsquare tomato">
 		  	<a href="project.html" class="main_container__link"> 
-		  		<img class="main_container__thumb" src="assets/images/thumbs/1.png" alt="">
+		  		<img class="main_container__thumb" src="assets/images/thumbs/1.jpg" alt="">
 			  	<object class="main_container__caption">
 			  		<span class="main_container__captiontitle">Nombre proyecto</span>
 			  		<a class="main_container__captiontext" href="#" target="_blank">Categoría del proyecto</a>
@@ -49,7 +49,7 @@
 
 		  <li class="main_container__frame--horect slateBlue">
 		  	<a href="project.html" class="main_container__link"> 
-		  		<img class="main_container__thumb" src="assets/images/thumbs/1.png" alt="">
+		  		<img class="main_container__thumb" src="assets/images/thumbs/1.jpg" alt="">
 			  	<object class="main_container__caption">
 			  		<span class="main_container__captiontitle">Nombre proyecto</span>
 			  		<a class="main_container__captiontext" href="#" target="_blank">Categoría del proyecto</a>
@@ -59,7 +59,7 @@
 
 		  <li class="main_container__frame--smallsquare orange">
 		  	<a href="project.html" class="main_container__link"> 
-		  		<img class="main_container__thumb" src="assets/images/thumbs/1.png" alt="">
+		  		<img class="main_container__thumb" src="assets/images/thumbs/1.jpg" alt="">
 			  	<object class="main_container__caption">
 			  		<span class="main_container__captiontitle">Nombre proyecto</span>
 			  		<a class="main_container__captiontext" href="#" target="_blank">Categoría del proyecto</a>
@@ -69,7 +69,7 @@
 
 		   <li class="main_container__frame--vertrect gray">
 		  	<a href="project.html" class="main_container__link"> 
-		  		<img class="main_container__thumb" src="assets/images/thumbs/1.png" alt="">
+		  		<img class="main_container__thumb" src="assets/images/thumbs/1.jpg" alt="">
 			  	<object class="main_container__caption">
 			  		<span class="main_container__captiontitle">Nombre proyecto</span>
 			  		<a class="main_container__captiontext" href="#" target="_blank">Categoría del proyecto</a>
@@ -79,7 +79,7 @@
 
 		   <li class="main_container__frame--bigsquare dodgerBlue">
 		  	<a href="project.html" class="main_container__link"> 
-		  		<img class="main_container__thumb" src="assets/images/thumbs/1.png" alt="">
+		  		<img class="main_container__thumb" src="assets/images/thumbs/1.jpg" alt="">
 			  	<object class="main_container__caption">
 			  		<span class="main_container__captiontitle">Nombre proyecto</span>
 			  		<a class="main_container__captiontext" href="#" target="_blank">Categoría del proyecto</a>
@@ -89,7 +89,7 @@
 
 		  <li class="main_container__frame--vertrect gray">
 		  	<a href="project.html" class="main_container__link"> 
-		  		<img class="main_container__thumb" src="assets/images/thumbs/1.png" alt="">
+		  		<img class="main_container__thumb" src="assets/images/thumbs/1.jpg" alt="">
 			  	<object class="main_container__caption">
 			  		<span class="main_container__captiontitle">Nombre proyecto</span>
 			  		<a class="main_container__captiontext" href="#" target="_blank">Categoría del proyecto</a>
@@ -99,7 +99,7 @@
 	
 		  <li class="main_container__frame--bigsquare mediumSeaGreen">
 		  	<a href="project.html" class="main_container__link"> 
-		  		<img class="main_container__thumb" src="assets/images/thumbs/1.png" alt="">
+		  		<img class="main_container__thumb" src="assets/images/thumbs/1.jpg" alt="">
 			  	<object class="main_container__caption">
 			  		<span class="main_container__captiontitle">Nombre proyecto</span>
 			  		<a class="main_container__captiontext" href="#" target="_blank">Categoría del proyecto</a>
@@ -109,7 +109,7 @@
 
 		  <li class="main_container__frame--smallsquare gray">
 		  	<a href="project.html" class="main_container__link"> 
-		  		<img class="main_container__thumb" src="assets/images/thumbs/1.png" alt="">
+		  		<img class="main_container__thumb" src="assets/images/thumbs/1.jpg" alt="">
 			  	<object class="main_container__caption">
 			  		<span class="main_container__captiontitle">Nombre proyecto</span>
 			  		<a class="main_container__captiontext" href="#" target="_blank">Categoría del proyecto</a>
@@ -119,7 +119,7 @@
 
 		  <li class="main_container__frame--smallsquare slateBlue">
 		  	<a href="project.html" class="main_container__link"> 
-		  		<img class="main_container__thumb" src="assets/images/thumbs/1.png" alt="">
+		  		<img class="main_container__thumb" src="assets/images/thumbs/1.jpg" alt="">
 			  	<object class="main_container__caption">
 			  		<span class="main_container__captiontitle">Nombre proyecto</span>
 			  		<a class="main_container__captiontext" href="#" target="_blank">Categoría del proyecto</a>
@@ -129,7 +129,7 @@
 
 		  <li class="main_container__frame--horect gray">
 		  	<a href="project.html" class="main_container__link"> 
-		  		<img class="main_container__thumb" src="assets/images/thumbs/1.png" alt="">
+		  		<img class="main_container__thumb" src="assets/images/thumbs/1.jpg" alt="">
 			  	<object class="main_container__caption">
 			  		<span class="main_container__captiontitle">Nombre proyecto</span>
 			  		<a class="main_container__captiontext" href="#" target="_blank">Categoría del proyecto</a>
@@ -139,7 +139,7 @@
 
 		  <li class="main_container__frame--smallsquare violet">
 		  	<a href="project.html" class="main_container__link"> 
-		  		<img class="main_container__thumb" src="assets/images/thumbs/1.png" alt="">
+		  		<img class="main_container__thumb" src="assets/images/thumbs/1.jpg" alt="">
 			  	<object class="main_container__caption">
 			  		<span class="main_container__captiontitle">Nombre proyecto</span>
 			  		<a class="main_container__captiontext" href="#" target="_blank">Categoría del proyecto</a>
