--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			<div class="main_nav__menu active">
 					<div class="main_nav__close"><button class="main_nav__closeicon"><i class="fas fa-times"></i></button></div>
 
-					<ul class="main_nav__list">
+					<ul id="menu" class="main_nav__list">
 						<li class="main_nav__item"><a href="index.html#gallery" class="main_nav__link">Work</a></li>
 						<li class="main_nav__item"><a href="about.html" class="main_nav__link">About</a></li>
 						<li class="main_nav__item"><a href="contact.html" class="main_nav__link">Contact</a></li>
